Finish setup layout mock, including add player button

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -88,6 +88,10 @@ body {
     flex: 0 auto;
 }
 
-.start-game-button {
+.add-player-button {
+    width: 100%;
+}
+
+.start-game-button-container {
     margin-top: 16px;
 }
